--- a/Sources/Markdown/Resources/web.bundle/marked.css
+++ b/Sources/Markdown/Resources/web.bundle/marked.css
@@ -1,12 +1,22 @@
-#__markdown_preview__ {
+body, html {
+    margin: 0;
+    padding: 0;
     user-select: none;
     -webkit-user-select: none;
+    min-height: 100%;
+}
+
+#__markdown_preview__ {
     cursor: default;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+}
+
+.markdown {
+    min-height: 100%;
+}
+
+.markdown-body code {
+    -webkit-user-select: text;
+    cursor: text;
 }
 
 @media (prefers-color-scheme: dark) {
