--- a/Sources/Markdown/Resources/web.bundle/marked.css
+++ b/Sources/Markdown/Resources/web.bundle/marked.css
@@ -10,8 +10,41 @@ body, html {
     cursor: default;
 }
 
-.markdown {
-    min-height: 100%;
+.highlight:hover .copied {
+  display: block;
+}
+.copy-icon.copied:hover, .copy-icon.copied.active {
+  opacity: 1;
+}
+.copy-icon.copied.active {
+  color: var(--color-prettylights-syntax-markup-inserted-text);
+}
+.copy-icon.copied {
+  display: none;
+  border-radius: 0.25rem;
+  border: none;
+  fill: currentColor;
+  cursor: pointer;
+  height: 1.25rem;
+  -webkit-mask-size: cover;
+  background-color: transparent;
+  mask-size: cover;
+  margin: 0;
+  padding: 0.05rem;
+  position: absolute;
+  right: 0.5rem;
+  top: 0.75rem;
+  width: 1.25rem;
+  opacity: .4;
+  transition: all .3s;
+}
+.copy-icon.copied svg {
+  width: 100%;
+  height: 100%;
+}
+
+.markdown-body .highlight {
+  position: relative;
 }
 
 .markdown-body pre code {
