--- a/Sources/Markdown/Resources/web.bundle/marked.css
+++ b/Sources/Markdown/Resources/web.bundle/marked.css
@@ -1,58 +1,3 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    user-select: none;
-    -webkit-user-select: none;
-    min-height: 100%;
-}
-
-#__markdown_preview__ {
-    cursor: default;
-}
-
-.highlight:hover .copied {
-  display: block;
-}
-.copy-icon.copied:hover, .copy-icon.copied.active {
-  opacity: 1;
-}
-.copy-icon.copied.active {
-  color: var(--color-prettylights-syntax-markup-inserted-text);
-}
-.copy-icon.copied {
-  display: none;
-  border-radius: 0.25rem;
-  border: none;
-  fill: currentColor;
-  cursor: pointer;
-  height: 1.25rem;
-  -webkit-mask-size: cover;
-  background-color: transparent;
-  mask-size: cover;
-  margin: 0;
-  padding: 0.05rem;
-  position: absolute;
-  right: 0.5rem;
-  top: 0.75rem;
-  width: 1.25rem;
-  opacity: .4;
-  transition: all .3s;
-}
-.copy-icon.copied svg {
-  width: 100%;
-  height: 100%;
-}
-
-.markdown-body .highlight {
-  position: relative;
-}
-
-.markdown-body pre code {
-    -webkit-user-select: text;
-    user-select: text;
-    cursor: text;
-}
-
 @media (prefers-color-scheme: dark) {
   .markdown-body {
     color-scheme: dark;
@@ -489,9 +434,23 @@ body, html {
 .token.maybe-class-name {
   color: var(--color-prettylights-syntax-variable);
 }
-.token.property-access, .token.operator, .token.boolean, .token.number, .token.selector .token.class, .token.attr-name, .token.string, .token.char, .token.builtin, .token.inserted {
+.token.property-access, .token.operator, .token.boolean, .token.number, .token.selector .token.class, .token.attr-name, .token.string, .token.char, .token.builtin {
   color: var(--color-prettylights-syntax-constant);
 }
+
+.token.deleted {
+  color: var(--color-prettylights-syntax-markup-deleted-text);
+}
+.code-line .token.deleted {
+  background-color: var(--color-prettylights-syntax-markup-deleted-bg);
+}
+.token.inserted {
+  color: var(--color-prettylights-syntax-markup-inserted-text);
+}
+.code-line .token.inserted {
+  background-color: var(--color-prettylights-syntax-markup-inserted-bg);
+}
+
 .token.variable {
   color: var(--color-prettylights-syntax-constant);
 }
